--- a/client/src/css/Cell.css
+++ b/client/src/css/Cell.css
@@ -1,4 +1,11 @@
-#cell {
+.cell {
   border: 1px solid rgba(0, 0, 0, 0.25);
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cell-number {
+  position: absolute;
 }
