--- a/client/src/css/Cell.css
+++ b/client/src/css/Cell.css
@@ -1,7 +1,5 @@
 .cell {
   border: 1px solid rgba(0, 0, 0, 0.25);
   text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  font-size: 2rem;
 }
