--- a/client/src/css/Board.css
+++ b/client/src/css/Board.css
@@ -3,7 +3,7 @@
   grid-template-rows: 1fr 1fr 1fr;
   width: 100%;
   max-width: 700px;
-  margin: 10em auto;
+  margin: 5% auto;
   grid-column: 3 / 4; 
 }
 
