--- a/client/src/css/Cell.css
+++ b/client/src/css/Cell.css
@@ -1,5 +1,8 @@
 .cell {
-  border: 1px solid rgba(0, 0, 0, 0.25);
+  border: 0.25px solid black;
   text-align: center;
   font-size: 2rem;
+  padding: 10px;
+  min-width: 50px;
+  min-height: 50px;
 }
