--- a/client/src/css/SideButtons.css
+++ b/client/src/css/SideButtons.css
@@ -4,3 +4,30 @@
   justify-content: center;
   align-items: center;
 }
+
+button {
+  font-size: 1.2rem;
+  width: 10em;
+  padding: 5px 0;
+  margin: 0.25em 0;
+  background-color: white;
+  border: 2px solid black;
+  cursor: pointer;
+  outline: none;
+}
+
+button:hover {
+  border: 2px solid transparent;
+}
+
+#newPuzzleHeader {
+  font-size: 1.3rem;
+  margin-top: 1.5rem;
+  width: 100%;
+  text-align: center;
+}
+
+.options {
+    display: flex;
+    flex-direction: column;
+}
